2011-03-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Dropped Gabriel support, resolves #13834

2011-03-08  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.2.0

2011-03-05  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to disable TCEmain logging, resolves #10663

2011-02-17  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed value of flushOutput configuration option to off

2011-02-16  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added property for trimming input data, resolves #12666

2011-01-25  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added SQL condition to restrict the set of records being acted upon during import, resolves #10676

2011-01-11  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added softer matching methods to value mappings, resolves #12090

2011-01-10  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected data sample creation for XML format, resolves #12028

2011-01-09  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for XPath queries relative to selected nodes in XML data, resolves #12027

2011-01-07  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to retrieve values from node attributes in XML data, resolves #12004
	* Corrected import process to abort it when import data type is not defined, resolves #12001

2010-12-13  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for rich-text fields, resolves #11344
	* Added support for exceptions thrown by connectors, resolves #11159

2010-11-29  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected wrong extension key in suggestion list (thanks to Fabien Udriot)
	* Corrected some wrong initializations in external_import configuration display (BE module)

2010-10-25  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.0

2010-10-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for additional where clause in foreign mappings, resolves #9277
